[package]
name = "input-device"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.1"
x11rb = "0.13.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.1", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
