[package]
name = "input-device"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.27"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.1"
x11rb = { version = "0.13.1", features = ["xtest"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.24.0", features = ["highsierra"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.1", features = ["Win32_UI_Controls", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Input_Pointer", "Win32_UI_WindowsAndMessaging"] }
